# diabetes

./: .gitignore  dataset.py  diabetes.py  pyproject.toml
