[tool.poetry]
name = "diabetes"
version = "0.1.0"
description = ""
authors = ["dawid.marszalik <dawid.marszalik.sdm@gmail.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
